// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`bot form save payload (specs/066 §1.10) > Combo create 1`] = `
{
  "created": [
    {
      "activeOrdersCount": 5,
      "adaptiveClose": false,
      "autoRebalancing": false,
      "baseAsset": [
        "BTC",
      ],
      "baseGridLevels": "5",
      "baseOrderPrice": "0",
      "baseOrderSize": "30",
      "baseSlOn": "avg",
      "baseStep": "0.5",
      "botActualStart": "manual",
      "botStart": "manual",
      "closeAfterX": "20",
      "closeAfterXconsecutiveLoss": "3",
      "closeAfterXconsecutiveWin": "3",
      "closeAfterXloss": "20",
      "closeAfterXopen": "20",
      "closeAfterXprofitCond": "gt",
      "closeAfterXprofitValue": "20",
      "closeAfterXwin": "20",
      "closeByTimer": false,
      "closeByTimerUnits": "minutes",
      "closeByTimerValue": 10,
      "closeDealType": "closeByMarket",
      "closeOrderType": "LIMIT",
      "coinm": false,
      "comboActiveMinigrids": "1",
      "comboSlLimit": false,
      "comboSmartGridsCount": "6",
      "comboTpBase": "filled",
      "comboTpLimit": false,
      "comboUseSmartGrids": false,
      "cooldownAfterDealStart": false,
      "cooldownAfterDealStartInterval": 1,
      "cooldownAfterDealStartOption": "bot",
      "cooldownAfterDealStartUnits": "minutes",
      "cooldownAfterDealStop": false,
      "cooldownAfterDealStopInterval": 1,
      "cooldownAfterDealStopOption": "bot",
      "cooldownAfterDealStopUnits": "minutes",
      "dcaByMarket": false,
      "dcaCondition": "percentage",
      "dcaCustom": [],
      "dcaVolumeBaseOn": "scale",
      "dcaVolumeMaxValue": "-1",
      "dcaVolumeRequiredChange": "5",
      "dcaVolumeRequiredChangeRef": "tp",
      "dealCloseCondition": "tp",
      "dealCloseConditionSL": "tp",
      "dynamicArLockValue": true,
      "dynamicPriceFilterDeviation": "1",
      "dynamicPriceFilterDirection": "under",
      "dynamicPriceFilterOverValue": "5",
      "dynamicPriceFilterPriceType": "entry",
      "dynamicPriceFilterUnderValue": "5",
      "exchange": "binance",
      "exchangeUUID": "ex-uuid-1",
      "feeOrder": true,
      "fixedSlPrice": "",
      "fixedTpPrice": "",
      "futures": false,
      "gridLevel": "5",
      "hodlAt": "15:00",
      "hodlDay": "7",
      "hodlHourly": false,
      "hodlNextBuy": 1790442000000,
      "ignoreStartDeals": false,
      "indicatorGroups": [],
      "indicators": [],
      "leverage": 1,
      "limitTimeout": "20",
      "marginType": "isolated",
      "maxDealsOver": "1",
      "maxDealsOverPerSymbol": "1",
      "maxDealsPerHigherTimeframe": "1",
      "maxDealsPerPair": "1",
      "maxDealsUnder": "1",
      "maxDealsUnderPerSymbol": "1",
      "maxNumberOfOpenDeals": "1",
      "maxOpenDeal": "",
      "minOpenDeal": "",
      "minTp": "1",
      "minimumDeviation": "1",
      "moveSL": false,
      "moveSLForAll": false,
      "moveSLTrigger": "0.5",
      "moveSLValue": "0.2",
      "name": "Payload probe",
      "notUseLimitReposition": false,
      "orderFixedIn": "quote",
      "orderSize": "30",
      "orderSizeType": "quote",
      "ordersCount": 5,
      "pair": [
        "BTC/USDT",
      ],
      "pairPrioritization": "alphabetical",
      "profitCurrency": "quote",
      "quoteAsset": [
        "USDT",
      ],
      "reinvestValue": "50",
      "relativeVolumeTop": "500",
      "relativeVolumeValue": "top25",
      "remainderFullAmount": false,
      "riskMaxPositionSize": "-1",
      "riskMaxSl": "-100",
      "riskMinPositionSize": "0",
      "riskMinSl": "0",
      "riskReductionValue": "50",
      "riskSlAmountPerc": "2",
      "riskSlAmountValue": "10",
      "riskSlType": "perc",
      "riskTpRatio": "1.5",
      "riskUseTpRatio": true,
      "rrSlFixedValue": "2",
      "rrSlType": "indicator",
      "scaleDcaType": "percentage",
      "skipBalanceCheck": false,
      "slPerc": "-25",
      "startBotLogic": "and",
      "startBotPriceCondition": "gt",
      "startBotPriceValue": "",
      "startCondition": "ASAP",
      "startDealLogic": "and",
      "startOrderType": "MARKET",
      "step": "2",
      "stepScale": "1",
      "stopBotLogic": "and",
      "stopBotPriceCondition": "gt",
      "stopBotPriceValue": "",
      "stopDealLogic": "and",
      "stopDealSlLogic": "and",
      "stopStatus": "closed",
      "stopType": "leave",
      "strategy": "LONG",
      "terminalDealType": "smart",
      "tpPerc": "3",
      "trailingSl": false,
      "trailingTp": false,
      "trailingTpPerc": "0.3",
      "type": "regular",
      "useActiveMinigrids": false,
      "useBotController": false,
      "useCloseAfterX": false,
      "useCloseAfterXconsecutiveLoss": false,
      "useCloseAfterXconsecutiveWin": false,
      "useCloseAfterXloss": false,
      "useCloseAfterXopen": false,
      "useCloseAfterXprofit": false,
      "useCloseAfterXwin": false,
      "useCooldown": false,
      "useDca": true,
      "useDynamicPriceFilter": false,
      "useFixedSLPrices": false,
      "useFixedTPPrices": false,
      "useLimitPrice": false,
      "useLimitTimeout": false,
      "useMaxDealsPerHigherTimeframe": true,
      "useMinTP": false,
      "useMulti": false,
      "useMultiSl": false,
      "useMultiTp": false,
      "useNoOverlapDeals": false,
      "useReinvest": false,
      "useRelativeVolumeFilter": false,
      "useRiskReduction": false,
      "useRiskReward": false,
      "useSeparateMaxDealsOverAndUnder": false,
      "useSeparateMaxDealsOverAndUnderPerSymbol": false,
      "useSl": false,
      "useSmartOrders": false,
      "useStaticPriceFilter": false,
      "useTp": true,
      "useVolumeFilter": false,
      "useVolumeFilterAll": false,
      "vars": {
        "list": [],
        "paths": [],
      },
      "volumeScale": "1",
      "volumeTop": "500",
      "volumeValue": "top25",
    },
  ],
  "toasts": [
    [
      "success",
      "Bot created successfully!",
    ],
  ],
  "updated": [],
}
`;

exports[`bot form save payload (specs/066 §1.10) > Combo edit 1`] = `
{
  "created": [],
  "toasts": [
    [
      "success",
      "Bot updated successfully!",
    ],
  ],
  "updated": [
    {
      "id": "bot-1",
      "settings": {
        "activeOrdersCount": 5,
        "adaptiveClose": false,
        "autoRebalancing": false,
        "baseGridLevels": "5",
        "baseOrderPrice": "0",
        "baseOrderSize": "30",
        "baseSlOn": "avg",
        "baseStep": "0.5",
        "botActualStart": "manual",
        "botStart": "manual",
        "closeAfterX": "20",
        "closeAfterXconsecutiveLoss": "3",
        "closeAfterXconsecutiveWin": "3",
        "closeAfterXloss": "20",
        "closeAfterXopen": "20",
        "closeAfterXprofitCond": "gt",
        "closeAfterXprofitValue": "20",
        "closeAfterXwin": "20",
        "closeByTimer": false,
        "closeByTimerUnits": "minutes",
        "closeByTimerValue": 10,
        "closeDealType": "closeByMarket",
        "closeOrderType": "LIMIT",
        "coinm": false,
        "comboActiveMinigrids": "1",
        "comboSlLimit": false,
        "comboSmartGridsCount": "6",
        "comboTpBase": "filled",
        "comboTpLimit": false,
        "comboUseSmartGrids": false,
        "cooldownAfterDealStart": false,
        "cooldownAfterDealStartInterval": 1,
        "cooldownAfterDealStartOption": "bot",
        "cooldownAfterDealStartUnits": "minutes",
        "cooldownAfterDealStop": false,
        "cooldownAfterDealStopInterval": 1,
        "cooldownAfterDealStopOption": "bot",
        "cooldownAfterDealStopUnits": "minutes",
        "dcaByMarket": false,
        "dcaCondition": "percentage",
        "dcaVolumeBaseOn": "scale",
        "dcaVolumeMaxValue": "-1",
        "dcaVolumeRequiredChange": "5",
        "dcaVolumeRequiredChangeRef": "tp",
        "dealCloseCondition": "tp",
        "dealCloseConditionSL": "tp",
        "dynamicArLockValue": true,
        "dynamicPriceFilterDeviation": "1",
        "dynamicPriceFilterDirection": "under",
        "dynamicPriceFilterOverValue": "5",
        "dynamicPriceFilterPriceType": "entry",
        "dynamicPriceFilterUnderValue": "5",
        "feeOrder": true,
        "futures": false,
        "gridLevel": "5",
        "hodlAt": "15:00",
        "hodlDay": "7",
        "hodlHourly": false,
        "hodlNextBuy": 1790442000000,
        "ignoreStartDeals": false,
        "leverage": 1,
        "limitTimeout": "20",
        "marginType": "isolated",
        "maxDealsOver": "1",
        "maxDealsOverPerSymbol": "1",
        "maxDealsPerHigherTimeframe": "1",
        "maxDealsPerPair": "1",
        "maxDealsUnder": "1",
        "maxDealsUnderPerSymbol": "1",
        "maxNumberOfOpenDeals": "1",
        "minTp": "1",
        "minimumDeviation": "1",
        "moveSL": false,
        "moveSLForAll": false,
        "moveSLTrigger": "0.5",
        "moveSLValue": "0.2",
        "name": "Payload probe",
        "notUseLimitReposition": false,
        "orderFixedIn": "quote",
        "orderSize": "30",
        "orderSizeType": "quote",
        "ordersCount": 5,
        "pair": [
          "BTC/USDT",
        ],
        "pairPrioritization": "alphabetical",
        "profitCurrency": "quote",
        "reinvestValue": "50",
        "relativeVolumeTop": "500",
        "relativeVolumeValue": "top25",
        "remainderFullAmount": false,
        "riskMaxPositionSize": "-1",
        "riskMaxSl": "-100",
        "riskMinPositionSize": "0",
        "riskMinSl": "0",
        "riskReductionValue": "50",
        "riskSlAmountPerc": "2",
        "riskSlAmountValue": "10",
        "riskSlType": "perc",
        "riskTpRatio": "1.5",
        "riskUseTpRatio": true,
        "rrSlFixedValue": "2",
        "rrSlType": "indicator",
        "scaleDcaType": "percentage",
        "skipBalanceCheck": false,
        "slPerc": "-25",
        "startBotLogic": "and",
        "startBotPriceCondition": "gt",
        "startCondition": "ASAP",
        "startDealLogic": "and",
        "startOrderType": "MARKET",
        "step": "2",
        "stepScale": "1",
        "stopBotLogic": "and",
        "stopBotPriceCondition": "gt",
        "stopDealLogic": "and",
        "stopDealSlLogic": "and",
        "stopStatus": "closed",
        "stopType": "leave",
        "strategy": "LONG",
        "tpPerc": "3",
        "trailingSl": false,
        "trailingTp": false,
        "trailingTpPerc": "0.3",
        "useActiveMinigrids": false,
        "useBotController": false,
        "useCloseAfterX": false,
        "useCloseAfterXconsecutiveLoss": false,
        "useCloseAfterXconsecutiveWin": false,
        "useCloseAfterXloss": false,
        "useCloseAfterXopen": false,
        "useCloseAfterXprofit": false,
        "useCloseAfterXwin": false,
        "useCooldown": false,
        "useDca": true,
        "useDynamicPriceFilter": false,
        "useFixedSLPrices": false,
        "useFixedTPPrices": false,
        "useLimitTimeout": false,
        "useMaxDealsPerHigherTimeframe": true,
        "useMinTP": false,
        "useMultiSl": false,
        "useMultiTp": false,
        "useNoOverlapDeals": false,
        "useReinvest": false,
        "useRelativeVolumeFilter": false,
        "useRiskReduction": false,
        "useRiskReward": false,
        "useSeparateMaxDealsOverAndUnder": false,
        "useSeparateMaxDealsOverAndUnderPerSymbol": false,
        "useSl": false,
        "useSmartOrders": false,
        "useStaticPriceFilter": false,
        "useTp": true,
        "useVolumeFilter": false,
        "useVolumeFilterAll": false,
        "volumeScale": "1",
        "volumeTop": "500",
        "volumeValue": "top25",
      },
      "vars": {
        "list": [],
        "paths": [],
      },
    },
  ],
}
`;

exports[`bot form save payload (specs/066 §1.10) > DCA create 1`] = `
{
  "created": [
    {
      "activeOrdersCount": 2,
      "adaptiveClose": false,
      "allowRaiseToExchangeMin": false,
      "autoRebalancing": false,
      "baseAsset": [
        "BTC",
      ],
      "baseGridLevels": "5",
      "baseOrderPrice": "0",
      "baseOrderSize": "25",
      "baseSlOn": "avg",
      "baseStep": "1",
      "botActualStart": "manual",
      "botStart": "manual",
      "closeAfterX": "20",
      "closeAfterXconsecutiveLoss": "3",
      "closeAfterXconsecutiveWin": "3",
      "closeAfterXloss": "20",
      "closeAfterXopen": "20",
      "closeAfterXprofitCond": "gt",
      "closeAfterXprofitValue": "20",
      "closeAfterXwin": "20",
      "closeByTimer": false,
      "closeByTimerUnits": "minutes",
      "closeByTimerValue": 10,
      "closeDealType": "closeByMarket",
      "closeOrderType": "LIMIT",
      "coinm": false,
      "comboActiveMinigrids": "1",
      "comboSlLimit": false,
      "comboSmartGridsCount": "6",
      "comboTpBase": "filled",
      "comboTpLimit": false,
      "comboUseSmartGrids": false,
      "cooldownAfterDealStart": false,
      "cooldownAfterDealStartInterval": 1,
      "cooldownAfterDealStartOption": "bot",
      "cooldownAfterDealStartUnits": "minutes",
      "cooldownAfterDealStop": false,
      "cooldownAfterDealStopInterval": 1,
      "cooldownAfterDealStopOption": "bot",
      "cooldownAfterDealStopUnits": "minutes",
      "dcaByMarket": false,
      "dcaCondition": "percentage",
      "dcaCustom": [],
      "dcaVolumeBaseOn": "scale",
      "dcaVolumeMaxValue": "-1",
      "dcaVolumeRequiredChange": "5",
      "dcaVolumeRequiredChangeRef": "tp",
      "dealCloseCondition": "tp",
      "dealCloseConditionSL": "tp",
      "dynamicArLockValue": true,
      "dynamicPriceFilterDeviation": "1",
      "dynamicPriceFilterDirection": "under",
      "dynamicPriceFilterOverValue": "5",
      "dynamicPriceFilterPriceType": "entry",
      "dynamicPriceFilterUnderValue": "5",
      "exchange": "binance",
      "exchangeUUID": "ex-uuid-1",
      "feeOrder": true,
      "fixedSlPrice": "",
      "fixedTpPrice": "",
      "futures": false,
      "gridLevel": "5",
      "hodlAt": "15:00",
      "hodlDay": "7",
      "hodlHourly": false,
      "hodlNextBuy": 1790442000000,
      "ignoreStartDeals": false,
      "importFrom": "",
      "indicatorGroups": [],
      "indicators": [],
      "leverage": 1,
      "limitTimeout": "20",
      "marginType": "isolated",
      "maxDealsOver": "1",
      "maxDealsOverPerSymbol": "1",
      "maxDealsPerHigherTimeframe": "1",
      "maxDealsPerPair": "1",
      "maxDealsUnder": "1",
      "maxDealsUnderPerSymbol": "1",
      "maxNumberOfOpenDeals": "3",
      "maxOpenDeal": "",
      "minOpenDeal": "",
      "minTp": "1",
      "minimumDeviation": "1",
      "moveSL": false,
      "moveSLForAll": false,
      "moveSLTrigger": "0.5",
      "moveSLValue": "0.2",
      "name": "Payload probe",
      "notUseLimitReposition": false,
      "orderFixedIn": "quote",
      "orderSize": "50",
      "orderSizeType": "quote",
      "ordersCount": 6,
      "pair": [
        "BTC/USDT",
      ],
      "pairPrioritization": "alphabetical",
      "profitCurrency": "quote",
      "quoteAsset": [
        "USDT",
      ],
      "reduceToAvailableBalance": false,
      "reduceToAvailableMinSize": "0",
      "reinvestValue": "50",
      "relativeVolumeTop": "500",
      "relativeVolumeValue": "top25",
      "remainderFullAmount": false,
      "riskMaxPositionSize": "-1",
      "riskMaxSl": "-100",
      "riskMinPositionSize": "0",
      "riskMinSl": "0",
      "riskReductionValue": "50",
      "riskSlAmountPerc": "2",
      "riskSlAmountValue": "10",
      "riskSlType": "perc",
      "riskTpRatio": "1.5",
      "riskUseTpRatio": true,
      "rrSlFixedValue": "2",
      "rrSlType": "indicator",
      "scaleDcaType": "percentage",
      "skipBalanceCheck": false,
      "slPerc": "-12",
      "startBotLogic": "and",
      "startBotPriceCondition": "gt",
      "startBotPriceValue": "",
      "startCondition": "ASAP",
      "startDealLogic": "and",
      "startOrderType": "MARKET",
      "step": "1.5",
      "stepScale": "1.1",
      "stopBotLogic": "and",
      "stopBotPriceCondition": "gt",
      "stopBotPriceValue": "",
      "stopDealLogic": "and",
      "stopDealSlLogic": "and",
      "stopStatus": "closed",
      "stopType": "leave",
      "strategy": "LONG",
      "terminalDealType": "smart",
      "tpPerc": "2.5",
      "trailingSl": false,
      "trailingTp": false,
      "trailingTpPerc": "0.3",
      "type": "regular",
      "useActiveMinigrids": false,
      "useBotController": false,
      "useCloseAfterX": false,
      "useCloseAfterXconsecutiveLoss": false,
      "useCloseAfterXconsecutiveWin": false,
      "useCloseAfterXloss": false,
      "useCloseAfterXopen": false,
      "useCloseAfterXprofit": false,
      "useCloseAfterXwin": false,
      "useCooldown": false,
      "useDca": true,
      "useDynamicPriceFilter": false,
      "useFixedSLPrices": false,
      "useFixedTPPrices": false,
      "useLimitPrice": false,
      "useLimitTimeout": false,
      "useMaxDealsPerHigherTimeframe": true,
      "useMinTP": false,
      "useMulti": false,
      "useMultiSl": false,
      "useMultiTp": false,
      "useNoOverlapDeals": false,
      "useReinvest": false,
      "useRelativeVolumeFilter": false,
      "useRiskReduction": false,
      "useRiskReward": false,
      "useSeparateMaxDealsOverAndUnder": false,
      "useSeparateMaxDealsOverAndUnderPerSymbol": false,
      "useSl": true,
      "useSmartOrders": false,
      "useStaticPriceFilter": false,
      "useTp": true,
      "useVolumeFilter": false,
      "useVolumeFilterAll": false,
      "vars": {
        "list": [],
        "paths": [],
      },
      "volumeScale": "1.4",
      "volumeTop": "500",
      "volumeValue": "top25",
    },
  ],
  "toasts": [
    [
      "success",
      "Bot created successfully!",
    ],
  ],
  "updated": [],
}
`;

exports[`bot form save payload (specs/066 §1.10) > DCA edit 1`] = `
{
  "created": [],
  "toasts": [
    [
      "success",
      "Bot updated successfully!",
    ],
  ],
  "updated": [
    {
      "id": "bot-1",
      "settings": {
        "activeOrdersCount": 2,
        "adaptiveClose": false,
        "allowRaiseToExchangeMin": false,
        "autoRebalancing": false,
        "baseOrderPrice": "0",
        "baseOrderSize": "25",
        "baseSlOn": "avg",
        "botActualStart": "manual",
        "botStart": "manual",
        "closeAfterX": "20",
        "closeAfterXconsecutiveLoss": "3",
        "closeAfterXconsecutiveWin": "3",
        "closeAfterXloss": "20",
        "closeAfterXopen": "20",
        "closeAfterXprofitCond": "gt",
        "closeAfterXprofitValue": "20",
        "closeAfterXwin": "20",
        "closeByTimer": false,
        "closeByTimerUnits": "minutes",
        "closeByTimerValue": 10,
        "closeDealType": "closeByMarket",
        "closeOrderType": "LIMIT",
        "coinm": false,
        "comboSmartGridsCount": "6",
        "comboTpBase": "filled",
        "comboUseSmartGrids": false,
        "cooldownAfterDealStart": false,
        "cooldownAfterDealStartInterval": 1,
        "cooldownAfterDealStartOption": "bot",
        "cooldownAfterDealStartUnits": "minutes",
        "cooldownAfterDealStop": false,
        "cooldownAfterDealStopInterval": 1,
        "cooldownAfterDealStopOption": "bot",
        "cooldownAfterDealStopUnits": "minutes",
        "dcaByMarket": false,
        "dcaCondition": "percentage",
        "dcaVolumeBaseOn": "scale",
        "dcaVolumeMaxValue": "-1",
        "dcaVolumeRequiredChange": "5",
        "dcaVolumeRequiredChangeRef": "tp",
        "dealCloseCondition": "tp",
        "dealCloseConditionSL": "tp",
        "dynamicArLockValue": true,
        "dynamicPriceFilterDeviation": "1",
        "dynamicPriceFilterDirection": "under",
        "dynamicPriceFilterOverValue": "5",
        "dynamicPriceFilterPriceType": "entry",
        "dynamicPriceFilterUnderValue": "5",
        "futures": false,
        "hodlAt": "15:00",
        "hodlDay": "7",
        "hodlHourly": false,
        "hodlNextBuy": 1790442000000,
        "ignoreStartDeals": false,
        "leverage": 1,
        "limitTimeout": "20",
        "marginType": "isolated",
        "maxDealsOver": "1",
        "maxDealsOverPerSymbol": "1",
        "maxDealsPerHigherTimeframe": "1",
        "maxDealsPerPair": "1",
        "maxDealsUnder": "1",
        "maxDealsUnderPerSymbol": "1",
        "maxNumberOfOpenDeals": "3",
        "minTp": "1",
        "minimumDeviation": "1",
        "moveSL": false,
        "moveSLForAll": false,
        "moveSLTrigger": "0.5",
        "moveSLValue": "0.2",
        "name": "Payload probe",
        "notUseLimitReposition": false,
        "orderFixedIn": "quote",
        "orderSize": "50",
        "orderSizeType": "quote",
        "ordersCount": 6,
        "pair": [
          "BTC/USDT",
        ],
        "pairPrioritization": "alphabetical",
        "profitCurrency": "quote",
        "reduceToAvailableBalance": false,
        "reduceToAvailableMinSize": "0",
        "reinvestValue": "50",
        "relativeVolumeTop": "500",
        "relativeVolumeValue": "top25",
        "remainderFullAmount": false,
        "riskMaxPositionSize": "-1",
        "riskMaxSl": "-100",
        "riskMinPositionSize": "0",
        "riskMinSl": "0",
        "riskReductionValue": "50",
        "riskSlAmountPerc": "2",
        "riskSlAmountValue": "10",
        "riskSlType": "perc",
        "riskTpRatio": "1.5",
        "riskUseTpRatio": true,
        "rrSlFixedValue": "2",
        "rrSlType": "indicator",
        "scaleDcaType": "percentage",
        "skipBalanceCheck": false,
        "slPerc": "-12",
        "startBotLogic": "and",
        "startBotPriceCondition": "gt",
        "startCondition": "ASAP",
        "startDealLogic": "and",
        "startOrderType": "MARKET",
        "step": "1.5",
        "stepScale": "1.1",
        "stopBotLogic": "and",
        "stopBotPriceCondition": "gt",
        "stopDealLogic": "and",
        "stopDealSlLogic": "and",
        "stopStatus": "closed",
        "stopType": "leave",
        "strategy": "LONG",
        "tpPerc": "2.5",
        "trailingSl": false,
        "trailingTp": false,
        "trailingTpPerc": "0.3",
        "useBotController": false,
        "useCloseAfterX": false,
        "useCloseAfterXconsecutiveLoss": false,
        "useCloseAfterXconsecutiveWin": false,
        "useCloseAfterXloss": false,
        "useCloseAfterXopen": false,
        "useCloseAfterXprofit": false,
        "useCloseAfterXwin": false,
        "useCooldown": false,
        "useDca": true,
        "useDynamicPriceFilter": false,
        "useFixedSLPrices": false,
        "useFixedTPPrices": false,
        "useLimitTimeout": false,
        "useMaxDealsPerHigherTimeframe": true,
        "useMinTP": false,
        "useMultiSl": false,
        "useMultiTp": false,
        "useNoOverlapDeals": false,
        "useReinvest": false,
        "useRelativeVolumeFilter": false,
        "useRiskReduction": false,
        "useRiskReward": false,
        "useSeparateMaxDealsOverAndUnder": false,
        "useSeparateMaxDealsOverAndUnderPerSymbol": false,
        "useSl": true,
        "useSmartOrders": false,
        "useStaticPriceFilter": false,
        "useTp": true,
        "useVolumeFilter": false,
        "useVolumeFilterAll": false,
        "volumeScale": "1.4",
        "volumeTop": "500",
        "volumeValue": "top25",
      },
      "vars": {
        "list": [],
        "paths": [],
      },
    },
  ],
}
`;

exports[`bot form save payload (specs/066 §1.10) > DCA edit after keystrokes 1`] = `
{
  "created": [],
  "toasts": [
    [
      "success",
      "Bot updated successfully!",
    ],
  ],
  "updated": [
    {
      "id": "bot-1",
      "settings": {
        "activeOrdersCount": 2,
        "adaptiveClose": false,
        "allowRaiseToExchangeMin": false,
        "autoRebalancing": false,
        "baseOrderPrice": "0",
        "baseOrderSize": "31",
        "baseSlOn": "avg",
        "botActualStart": "manual",
        "botStart": "manual",
        "closeAfterX": "20",
        "closeAfterXconsecutiveLoss": "3",
        "closeAfterXconsecutiveWin": "3",
        "closeAfterXloss": "20",
        "closeAfterXopen": "20",
        "closeAfterXprofitCond": "gt",
        "closeAfterXprofitValue": "20",
        "closeAfterXwin": "20",
        "closeByTimer": false,
        "closeByTimerUnits": "minutes",
        "closeByTimerValue": 10,
        "closeDealType": "closeByMarket",
        "closeOrderType": "LIMIT",
        "coinm": false,
        "comboSmartGridsCount": "6",
        "comboTpBase": "filled",
        "comboUseSmartGrids": false,
        "cooldownAfterDealStart": false,
        "cooldownAfterDealStartInterval": 1,
        "cooldownAfterDealStartOption": "bot",
        "cooldownAfterDealStartUnits": "minutes",
        "cooldownAfterDealStop": false,
        "cooldownAfterDealStopInterval": 1,
        "cooldownAfterDealStopOption": "bot",
        "cooldownAfterDealStopUnits": "minutes",
        "dcaByMarket": false,
        "dcaCondition": "percentage",
        "dcaVolumeBaseOn": "scale",
        "dcaVolumeMaxValue": "-1",
        "dcaVolumeRequiredChange": "5",
        "dcaVolumeRequiredChangeRef": "tp",
        "dealCloseCondition": "tp",
        "dealCloseConditionSL": "tp",
        "dynamicArLockValue": true,
        "dynamicPriceFilterDeviation": "1",
        "dynamicPriceFilterDirection": "under",
        "dynamicPriceFilterOverValue": "5",
        "dynamicPriceFilterPriceType": "entry",
        "dynamicPriceFilterUnderValue": "5",
        "futures": false,
        "hodlAt": "15:00",
        "hodlDay": "7",
        "hodlHourly": false,
        "hodlNextBuy": 1790442000000,
        "ignoreStartDeals": false,
        "leverage": 1,
        "limitTimeout": "20",
        "marginType": "isolated",
        "maxDealsOver": "1",
        "maxDealsOverPerSymbol": "1",
        "maxDealsPerHigherTimeframe": "1",
        "maxDealsPerPair": "1",
        "maxDealsUnder": "1",
        "maxDealsUnderPerSymbol": "1",
        "maxNumberOfOpenDeals": "3",
        "minTp": "1",
        "minimumDeviation": "1",
        "moveSL": false,
        "moveSLForAll": false,
        "moveSLTrigger": "0.5",
        "moveSLValue": "0.2",
        "name": "Payload probe renamed",
        "notUseLimitReposition": false,
        "orderFixedIn": "quote",
        "orderSize": "50",
        "orderSizeType": "quote",
        "ordersCount": 6,
        "pair": [
          "BTC/USDT",
        ],
        "pairPrioritization": "alphabetical",
        "profitCurrency": "quote",
        "reduceToAvailableBalance": false,
        "reduceToAvailableMinSize": "0",
        "reinvestValue": "50",
        "relativeVolumeTop": "500",
        "relativeVolumeValue": "top25",
        "remainderFullAmount": false,
        "riskMaxPositionSize": "-1",
        "riskMaxSl": "-100",
        "riskMinPositionSize": "0",
        "riskMinSl": "0",
        "riskReductionValue": "50",
        "riskSlAmountPerc": "2",
        "riskSlAmountValue": "10",
        "riskSlType": "perc",
        "riskTpRatio": "1.5",
        "riskUseTpRatio": true,
        "rrSlFixedValue": "2",
        "rrSlType": "indicator",
        "scaleDcaType": "percentage",
        "skipBalanceCheck": false,
        "slPerc": "-12",
        "startBotLogic": "and",
        "startBotPriceCondition": "gt",
        "startCondition": "ASAP",
        "startDealLogic": "and",
        "startOrderType": "MARKET",
        "step": "1.5",
        "stepScale": "1.1",
        "stopBotLogic": "and",
        "stopBotPriceCondition": "gt",
        "stopDealLogic": "and",
        "stopDealSlLogic": "and",
        "stopStatus": "closed",
        "stopType": "leave",
        "strategy": "LONG",
        "tpPerc": "4.2",
        "trailingSl": false,
        "trailingTp": false,
        "trailingTpPerc": "0.3",
        "useBotController": false,
        "useCloseAfterX": false,
        "useCloseAfterXconsecutiveLoss": false,
        "useCloseAfterXconsecutiveWin": false,
        "useCloseAfterXloss": false,
        "useCloseAfterXopen": false,
        "useCloseAfterXprofit": false,
        "useCloseAfterXwin": false,
        "useCooldown": false,
        "useDca": true,
        "useDynamicPriceFilter": false,
        "useFixedSLPrices": false,
        "useFixedTPPrices": false,
        "useLimitTimeout": false,
        "useMaxDealsPerHigherTimeframe": true,
        "useMinTP": false,
        "useMultiSl": false,
        "useMultiTp": false,
        "useNoOverlapDeals": false,
        "useReinvest": false,
        "useRelativeVolumeFilter": false,
        "useRiskReduction": false,
        "useRiskReward": false,
        "useSeparateMaxDealsOverAndUnder": false,
        "useSeparateMaxDealsOverAndUnderPerSymbol": false,
        "useSl": true,
        "useSmartOrders": false,
        "useStaticPriceFilter": false,
        "useTp": true,
        "useVolumeFilter": false,
        "useVolumeFilterAll": false,
        "volumeScale": "1.4",
        "volumeTop": "500",
        "volumeValue": "top25",
      },
      "vars": {
        "list": [],
        "paths": [],
      },
    },
  ],
}
`;

exports[`bot form save payload (specs/066 §1.10) > Grid create 1`] = `
{
  "created": [
    {
      "baseAsset": "BTC",
      "budget": 1000,
      "coinm": false,
      "exchange": "binance",
      "exchangeUUID": "ex-uuid-1",
      "feeOrder": true,
      "futures": false,
      "futuresStrategy": "NEUTRAL",
      "gridStep": 0.01,
      "gridType": "geometric",
      "levels": 40,
      "leverage": 1,
      "lowPrice": 50000,
      "marginType": "isolated",
      "name": "Payload probe",
      "newProfit": true,
      "orderFixedIn": "quote",
      "ordersInAdvance": 6,
      "pair": "BTC/USDT",
      "prioritize": "level",
      "profitCurrency": "quote",
      "quoteAsset": "USDT",
      "sellDisplacement": 0,
      "skipBalanceCheck": false,
      "sl": true,
      "slAction": "stop",
      "slCondition": "valueChanged",
      "slLimit": false,
      "slLowPrice": 0,
      "slPerc": -0.1,
      "startPrice": "",
      "strategy": "LONG",
      "topPrice": 80000,
      "tpPerc": 0.05,
      "tpSl": true,
      "tpSlAction": "stop",
      "tpSlCondition": "valueChanged",
      "tpSlLimit": false,
      "tpTopPrice": 0,
      "useOrderInAdvance": false,
      "useStartPrice": false,
      "vars": {
        "list": [],
        "paths": [],
      },
    },
  ],
  "toasts": [
    [
      "success",
      "Bot created successfully!",
    ],
  ],
  "updated": [],
}
`;

exports[`bot form save payload (specs/066 §1.10) > Grid create after keystrokes 1`] = `
{
  "created": [
    {
      "baseAsset": "BTC",
      "budget": 1500,
      "coinm": false,
      "exchange": "binance",
      "exchangeUUID": "ex-uuid-1",
      "feeOrder": true,
      "futures": false,
      "futuresStrategy": "NEUTRAL",
      "gridStep": 0.01,
      "gridType": "geometric",
      "levels": 55,
      "leverage": 1,
      "lowPrice": 50000,
      "marginType": "isolated",
      "name": "Payload probe",
      "newProfit": true,
      "orderFixedIn": "quote",
      "ordersInAdvance": 6,
      "pair": "BTC/USDT",
      "prioritize": "level",
      "profitCurrency": "quote",
      "quoteAsset": "USDT",
      "sellDisplacement": 0,
      "skipBalanceCheck": false,
      "sl": true,
      "slAction": "stop",
      "slCondition": "valueChanged",
      "slLimit": false,
      "slLowPrice": 0,
      "slPerc": -0.1,
      "startPrice": "",
      "strategy": "LONG",
      "topPrice": 80000,
      "tpPerc": 0.05,
      "tpSl": true,
      "tpSlAction": "stop",
      "tpSlCondition": "valueChanged",
      "tpSlLimit": false,
      "tpTopPrice": 0,
      "useOrderInAdvance": false,
      "useStartPrice": false,
      "vars": {
        "list": [],
        "paths": [],
      },
    },
  ],
  "toasts": [
    [
      "success",
      "Bot created successfully!",
    ],
  ],
  "updated": [],
}
`;

exports[`bot form save payload (specs/066 §1.10) > Grid edit 1`] = `
{
  "created": [],
  "toasts": [
    [
      "success",
      "Bot updated successfully!",
    ],
  ],
  "updated": [
    {
      "id": "bot-1",
      "settings": {
        "budget": 1000,
        "coinm": false,
        "feeOrder": true,
        "futures": false,
        "futuresStrategy": "NEUTRAL",
        "gridStep": 0.01,
        "gridType": "geometric",
        "levels": 40,
        "leverage": 1,
        "lowPrice": 50000,
        "marginType": "isolated",
        "name": "Payload probe",
        "orderFixedIn": "quote",
        "ordersInAdvance": 6,
        "prioritize": "level",
        "profitCurrency": "quote",
        "sellDisplacement": 0,
        "skipBalanceCheck": false,
        "sl": true,
        "slAction": "stop",
        "slCondition": "valueChanged",
        "slLimit": false,
        "slLowPrice": 0,
        "slPerc": -0.1,
        "startPrice": "",
        "topPrice": 80000,
        "tpPerc": 0.05,
        "tpSl": true,
        "tpSlAction": "stop",
        "tpSlCondition": "valueChanged",
        "tpSlLimit": false,
        "tpTopPrice": 0,
        "useOrderInAdvance": false,
        "useStartPrice": false,
      },
      "vars": {
        "list": [],
        "paths": [],
      },
    },
  ],
}
`;
